fixed grid spacing issue

--- a/site/web/app/themes/sage/resources/assets/styles/layouts/_article-grid.scss
+++ b/site/web/app/themes/sage/resources/assets/styles/layouts/_article-grid.scss
@@ -1,6 +1,6 @@
 .article-grid {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: space-between;
 
 	flex-wrap: wrap;
 
@@ -30,6 +30,7 @@
 
 	article {
 		margin-bottom: 2rem;
+		flex-basis: 100%;
 	}
 	
 	@media (min-width: $breakpoint--sm) {
@@ -37,7 +38,7 @@
 			margin-right: 1rem;
 			flex-basis: calc(50% - 1rem);
 
-			&:last-of-type {
+			&:nth-of-type(2n) {
 				margin-right: 0;
 			}
 		}
@@ -46,13 +47,20 @@
 	@media (min-width: $breakpoint--md) {
 		& > article {
 			flex-basis: calc(33.3% - 1rem);
+			&:nth-of-type(3n) {
+				margin-right: 0;
+			}
 		}
 	}
 
 	@media (min-width: $breakpoint--lg) {
 		&:not(.article-grid--front) > article:not(.grid-hero) {
 			flex-basis: calc(25% - 1rem);
+			&:nth-of-type(5n) {
+				margin-right: 0;
+			}
 		}
+		
 	}
 }
 article.has-hover > figure {
